# openharness

./: .editorconfig  .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-review.yml  ci.yml  publish-python.yml  publish.yml  python-lint.yml
.husky/: pre-commit
data/: registry.json
data/skills/: diagnose.md  plan.md  simplify.md
docs/: configuration.md  ecosystem-compat.md  hooks.md  mcp-servers.md
oh/: bridge.py
openharness/agent/: loop.py
openharness/core/: config.py
openharness/harness/: hooks.py
openharness/providers/: ollama.py
openharness/tools/: web_fetch.py
python/: CHANGELOG.md  README.md  pyproject.toml
python/oh/: __main__.py
python/oh/cli/: chat.py  config_cmd.py  cost.py  main.py  sessions.py  ui.py
python/openharness/: __init__.py  _binary.py  client.py  events.py  exceptions.py  query.py
python/openharness/agent/: context.py  permissions.py  router.py  sub_agent.py
python/openharness/core/: events.py  exceptions.py  session.py  types.py
python/openharness/harness/: cost.py  memory.py  onboarding.py  rules.py  skills.py
python/openharness/mcp/: client.py  types.py
python/openharness/providers/: anthropic.py  base.py  openai.py  openai_compat.py  openrouter.py  registry.py
python/openharness/tools/: base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep.py  registry.py
python/tests/: conftest.py  test_binary.py  test_bridge.py  test_client.py  test_events.py  test_query.py
python/tests/test_core/: test_session.py
python/tests/test_tools/: test_file_edit.py
scripts/: coverage.mjs  test.mjs
src/: DeferredTool.test.ts  DeferredTool.ts  Tool.test.ts  Tool.ts  main.tsx  query.test.ts  query.ts  repl.ts  test-helpers.ts  tools.ts
src/agents/: roles.test.ts  roles.ts
src/commands/: ai.ts  commands-extended.test.ts  commands-new.test.ts  commands.test.ts  cybergotchi.ts  index.ts  info.ts  mcp-auth.test.ts  mcp-auth.ts  session.test.ts  session.ts  skills.ts  types.ts
src/components/: App.tsx  CompanionFooter.tsx  CybergotchiBubble.tsx  CybergotchiPanel.tsx  CybergotchiPanelConnected.tsx  CybergotchiSetup.tsx  CybergotchiSprite.tsx  DiffView.tsx  ErrorBoundary.tsx  InitWizard.tsx  Markdown.tsx  Messages.tsx  PermissionPrompt.tsx  REPL.tsx  Spinner.tsx  StatusBar.tsx  TextInput.tsx  ToolCallDisplay.tsx
src/cybergotchi/: bones.test.ts  bones.ts  config.ts  events.ts  needs.test.ts  needs.ts  personality.ts  species.ts  speech.ts  types.ts  useCybergotchi.ts
src/git/: git.test.ts  index.ts
src/harness/: cc-plugin-integration.test.ts  checkpoints.test.ts  checkpoints.ts  config.test.ts  config.ts  context-warning.test.ts  context-warning.ts  cost.test.ts  cost.ts  credentials.test.ts  credentials.ts  hooks-env.test.ts  hooks.test.ts  hooks.ts  keybindings.test.ts  keybindings.ts  marketplace.test.ts  marketplace.ts  memory-consolidation.test.ts  memory.test.ts  memory.ts  onboarding.test.ts  onboarding.ts  plugins.test.ts  plugins.ts  rules.test.ts  rules.ts  sandbox.test.ts  sandbox.ts  session-db.test.ts  session-db.ts  session.test.ts  session.ts  skill-registry.test.ts  skill-registry.ts  store.test.ts  store.ts  submit-handler.test.ts  submit-handler.ts  telemetry.ts  (+4 more)
src/lsp/: client.test.ts  client.ts
src/mcp/: McpTool.ts  (+25 more)
vscode-extension/: README.md  package.json  tsconfig.json
(+158 files in other folders)
