[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openharness"
version = "0.1.0"
description = "Open-source agent harness framework — build your own Claude Code with any LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "wangz" },
]
keywords = ["ai", "agent", "llm", "cli", "harness", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["openharness[openai,anthropic]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
oh = "oh.cli.main:app"

[project.urls]
Homepage = "https://github.com/zhijiewong/openharness"
Repository = "https://github.com/zhijiewong/openharness"

[tool.hatch.build.targets.wheel]
packages = ["openharness", "oh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
